add new calculator pages and logo

--- a/footer.html
+++ b/footer.html
@@ -58,18 +58,21 @@
         <h3>Contact Us</h3>
         <div class="widget widget-address">
           <address>
-            <span>100 S Main St, Los Angeles, CA</span>
-            <span><strong>Phone:</strong>(208) 333 9296</span>
-            <span><strong>Fax:</strong>(208) 333 9298</span>
+            <span>Plot No. 26, near swami sarwanand chowk, New Colony</span>
+            <span>Palwal, Haryana (121102)</span>
+            <span
+              ><strong>Phone:</strong
+              ><a href="tel:+919050191331">+91 9050191331</a></span
+            >
             <span
               ><strong>Email:</strong
-              ><a href="mailto:contact@archi-interior.com"
-                >contact@archi-interior.com</a
+              ><a href="mailto:vishalgoel9099@gmail.com"
+                >vishalgoel9099@gmail.com</a
               ></span
             >
             <span
               ><strong>Web:</strong
-              ><a href="#">http://archi-interior.com</a></span
+              ><a href="https://investheights.com">https://investheights.com</a></span
             >
           </address>
         </div>
@@ -81,8 +84,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          &copy; Copyright 2025 - Archi Interior Design Template by
-          <span class="id-color">Designesia</span>
+          &copy; Copyright 2025 - Invest Heights | All Rights Reserved
         </div>
         <div class="col-md-6 text-right">
           <div class="social-icons">
