--- a/header.html
+++ b/header.html
@@ -3,10 +3,28 @@
     <div class="row align-items-center" style="background-size: cover">
       <div class="col-lg-3 col-md-12" style="background-size: cover">
         <!-- logo begin -->
-        <div id="logo" style="background-size: cover">
-          <a href="/">
-            <img class="logo" src="14_images-cctv/logo.png" alt="" />
-          </a>
+        <div id="logo">
+          <img
+            class="logo"
+            style="max-width: 100%; max-height: 100%; object-fit: contain"
+            src="14_images-cctv/logo/logo.png"
+            alt=""
+          />
+          <style>
+            header div#logo {
+              display: grid;
+              background-size: cover;
+              top: -62px;
+              position: relative;
+            }
+            @media (max-width: 768px) {
+              header div#logo {
+                display: flex;
+                height: 120px;
+                top: -19px;
+              }
+            }
+          </style>
         </div>
         <!-- logo close -->
 
@@ -25,7 +43,7 @@
                   <span class="id-color">Monday - Friday</span>
                 </div>
                 <div class="info-box_subtite" style="background-size: cover">
-                  09:00 - 18:00
+                  09:00 AM - 06:00 PM
                 </div>
               </div>
             </div>
@@ -39,7 +57,7 @@
                   <span class="id-color">Email Us</span>
                 </div>
                 <div class="info-box_subtite" style="background-size: cover">
-                  info@architheme.com
+                  vishalgoel9099@gmail.com
                 </div>
               </div>
             </div>
@@ -53,7 +71,7 @@
                   <span class="id-color">Call Us</span>
                 </div>
                 <div class="info-box_subtite" style="background-size: cover">
-                  <a href="tel: +917206969076">+91 7206969076</a>
+                  <a href="tel: +919050191331">+91 9050191331</a>
                 </div>
               </div>
             </div>
@@ -96,12 +114,16 @@
                 <span></span>
                 <ul>
                   <li>
-                    <a href="project-wide-4-cols.html">Mutual Funds</a>
+                    <a href="stock-broking.html">Stock Broking</a>
                   </li>
                   <li>
-                    <a href="project-wide-4-cols.html"
-                      >SIP(Systematic Investment Plan)</a
-                    >
+                    <a href="mutual-funds.html">Mutual Funds</a>
+                  </li>
+                  <li>
+                    <a href="bonds.html">Bonds</a>
+                  </li>
+                  <li>
+                    <a href="corporate-fd.html">Corporate FD's</a>
                   </li>
                   <li>
                     <a href="project-contained-3-cols.html"
@@ -111,7 +133,7 @@
                 </ul>
               </li>
               <li>
-                <a href=href="javascript:void(0)">Insurance</a>
+                <a href="javascript:void(0)">Insurance</a>
                 <span></span>
                 <ul>
                   <li>
@@ -127,13 +149,15 @@
                 <span></span>
                 <ul>
                   <li>
-                    <a href="project-wide-4-cols.html">Loan Calculator</a>
+                    <a href="loan-Calculator.html">Loan Calculator</a>
                   </li>
                   <li>
-                    <a href="project-wide-4-cols.html">SIP Calculator</a>
+                    <a href="sip-Calculator.html">SIP Calculator</a>
                   </li>
                   <li>
-                    <a href="project-wide-4-cols.html">Income Tax Calculator</a>
+                    <a href="income-Tax-Calculator.html"
+                      >Income Tax Calculator</a
+                    >
                   </li>
                 </ul>
               </li>
