add new calculator pages and logo

--- a/header.html
+++ b/header.html
@@ -133,7 +133,7 @@
                     <a href="corporate-fd.html">Corporate FD's</a>
                   </li>
                   <li>
-                    <a href="project-contained-3-cols.html"
+                    <a href="portfolio-management.html"
                       >Portfolio Management Services</a
                     >
                   </li>
