--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
       <div class="col-lg-3 col-md-12" style="background-size: cover">
         <!-- logo begin -->
         <div id="logo">
-          <a>
+          <a href="/" >
             <img
               class="logo"
               style="max-width: 100%; max-height: 100%; object-fit: contain"
