--- a/corporate-fd.html
+++ b/corporate-fd.html
@@ -68,8 +68,6 @@
 
       <!-- content begin -->
       <div id="content" class="no-bottom no-top">
-     
-        
         <section
           id="section-action"
           class="jarallax text-light"
@@ -87,20 +85,22 @@
                   background-size: cover;
                 "
               >
-                <h2>Do you looking for professional security camera?</h2>
+                <h2>Looking for trusted Corporate Fixed Deposits?</h2>
                 <p>
-                  Lorem ipsum velit commodo proident sint in ad commodo culpa
-                  dolor officia deserunt minim in amet irure proident duis
-                  commodo adipisicing non ad ut quis exercitation dolor velit
-                  esse esse velit eiusmod exercitation culpa ut tempor ut quis
-                  in consectetur velit nostrud aliquip non in est enim pariatur
-                  eiusmod ex irure tempor irure do ut magna.
+                  Invest in Corporate Fixed Deposits (FDs) to earn attractive
+                  returns with flexible tenures and enhanced safety. Our
+                  advisors help you choose the best-rated corporate FDs,
+                  ensuring your investments are secure and aligned with your
+                  financial goals. Benefit from higher interest rates, easy
+                  liquidity, and expert guidance for a seamless investment
+                  experience.
                 </p>
                 <a
-                  href="14_cctv-contact.html"
+                  href="https://mosl.co/2q9K1G6kAX"
                   class="btn-custom text-light wow fadeInUp animated"
                   style="visibility: visible; animation-name: fadeInUp"
-                  >Get a Free Quote
+                  target="_blank"
+                  >Create an Account Now
                 </a>
               </div>
             </div>
