--- a/header.html
+++ b/header.html
@@ -101,18 +101,16 @@
                 <span></span>
                 <ul>
                   <li>
-                    <a href="project-wide-4-cols.html">Financial Planning</a>
+                    <a href="financial-planning.html">Financial Planning</a>
                   </li>
                   <li>
-                    <a href="project-wide-4-cols.html">Investment Planning</a>
+                    <a href="investment-planning.html">Investment Planning</a>
                   </li>
                   <li>
-                    <a href="project-contained-3-cols.html">Risk Management</a>
+                    <a href="risk-management.html">Risk Management</a>
                   </li>
                   <li>
-                    <a href="project-carousel-3-cols.html"
-                      >Retirement Planning</a
-                    >
+                    <a href="retirement-planning.html">Retirement Planning</a>
                   </li>
                 </ul>
               </li>
