--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <section
           id="section-hero"
           class="vertical-center text-light jarallax"
+          style="height: 600px;"
           aria-label="section"
         >
           <img
