--- a/mutual-funds.html
+++ b/mutual-funds.html
@@ -86,21 +86,17 @@
                   animation-name: fadeInUp;
                   background-size: cover;
                 "
-              >
-                <h2>Do you looking for professional security camera?</h2>
+                >
+                <h2>Looking to Invest in Mutual Funds?</h2>
                 <p>
-                  Lorem ipsum velit commodo proident sint in ad commodo culpa
-                  dolor officia deserunt minim in amet irure proident duis
-                  commodo adipisicing non ad ut quis exercitation dolor velit
-                  esse esse velit eiusmod exercitation culpa ut tempor ut quis
-                  in consectetur velit nostrud aliquip non in est enim pariatur
-                  eiusmod ex irure tempor irure do ut magna.
+                  Discover a range of mutual fund options tailored to your financial goals. Our certified advisors help you choose the right funds for wealth creation, tax saving, and retirement planning. Benefit from expert guidance, diversified portfolios, and transparent investment strategies to grow your money securely and efficiently.
                 </p>
                 <a
-                  href="14_cctv-contact.html"
+                  href="https://mosl.co/2q9K1G6kAX"
                   class="btn-custom text-light wow fadeInUp animated"
                   style="visibility: visible; animation-name: fadeInUp"
-                  >Get a Free Quote
+                  target="_blank"
+                  >Create an Account Now
                 </a>
               </div>
             </div>
