--- a/bonds.html
+++ b/bonds.html
@@ -68,8 +68,6 @@
 
       <!-- content begin -->
       <div id="content" class="no-bottom no-top">
-     
-        
         <section
           id="section-action"
           class="jarallax text-light"
@@ -87,20 +85,25 @@
                   background-size: cover;
                 "
               >
-                <h2>Do you looking for professional security camera?</h2>
+                <h2>Investing in Bonds in India</h2>
                 <p>
-                  Lorem ipsum velit commodo proident sint in ad commodo culpa
-                  dolor officia deserunt minim in amet irure proident duis
-                  commodo adipisicing non ad ut quis exercitation dolor velit
-                  esse esse velit eiusmod exercitation culpa ut tempor ut quis
-                  in consectetur velit nostrud aliquip non in est enim pariatur
-                  eiusmod ex irure tempor irure do ut magna.
+                  Bonds are fixed-income instruments issued by governments,
+                  corporations, and financial institutions in India. Popular
+                  options include Government Securities (G-Secs), State
+                  Development Loans (SDLs), Corporate Bonds, and Tax-Free Bonds.
+                  Bonds offer regular interest payments and are considered
+                  relatively safe investments. They can be purchased through
+                  stock exchanges, banks, or RBI’s Retail Direct platform.
+                  Investors should consider factors such as credit rating,
+                  maturity period, interest rate, and tax implications before
+                  investing in bonds.
                 </p>
                 <a
-                  href="14_cctv-contact.html"
+                  href="https://mosl.co/2q9K1G6kAX"
                   class="btn-custom text-light wow fadeInUp animated"
                   style="visibility: visible; animation-name: fadeInUp"
-                  >Get a Free Quote
+                  target="_blank"
+                  >Create an Account Now
                 </a>
               </div>
             </div>
