--- a/risk-management.html
+++ b/risk-management.html
@@ -378,7 +378,7 @@
 
     try {
       // Send email using the API
-      const response = await fetch('http://localhost:3000/api/send-email', {
+      const response = await fetch('https://finance-management-api.netlify.app/api/send-email', {
         method: 'POST',
         headers: {
           'Accept': 'application/json',
