--- a/footer.html
+++ b/footer.html
@@ -58,14 +58,23 @@
         <h3>Contact Us</h3>
         <div class="widget widget-address">
           <address>
-            <span>Plot No. 26, near swami sarwanand chowk, New Colony</span>
+            <span>DU-285/1 Kailash Apartment, Near Agra Chowk</span>
             <span>Palwal, Haryana (121102)</span>
             <span
               ><strong>Phone:</strong
-              ><a href="tel:+919050191331">+91 9050191331</a></span
+              >
+              <a href="tel:+918607242526">+91 8607242526</a></span
             >
             <span
-              ><strong>Email:</strong
+              >
+              <span
+              ><strong>WhatsApp: </strong
+              >
+              <a href="https://wa.me/918607242526?text=Hi,%20Welcome%20to%20Invest%20Heights." target="_blank">Send me Hi on Whatspp!</a></span
+            >
+            <span
+              >
+              <strong>Email:</strong
               ><a href="mailto:vishalgoel9099@gmail.com"
                 >vishalgoel9099@gmail.com</a
               ></span
