update whatsapp message

--- a/footer.html
+++ b/footer.html
@@ -70,7 +70,7 @@
               <span
               ><strong>WhatsApp: </strong
               >
-              <a href="https://wa.me/918607242526?text=Hi,%20Welcome%20to%20Invest%20Heights." target="_blank">Send me Hi on Whatspp!</a></span
+              <a href="https://wa.me/918607242526?text=Hi" target="_blank">Send me Hi on Whatspp!</a></span
             >
             <span
               >
